# duneexamples

./: CMakeLists.txt  CMakePresets.json  README.md
duneexamples/DuneExample/: CMakeLists.txt  classes.h
duneexamples/DuneExample/test/: CMakeLists.txt
duneexamples/GalleryScripts/: chancorrel.C  chanfft.C  cmc.C  evd_311.C  evd_rawdigits.C  meanrms.C  pdspdisp.C  trigdump.C
ups/: product_deps
